@@ -2,14 +2,16 @@ package com.vsp.endpointinsightsapi.controller;
 
 import com.vsp.endpointinsightsapi.dto.BatchRequestDTO;
 import com.vsp.endpointinsightsapi.dto.BatchResponseDTO;
-import com.vsp.endpointinsightsapi.model.TestBatch;
 import com.vsp.endpointinsightsapi.service.BatchService;
+import com.vsp.endpointinsightsapi.model.TestBatch;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
+import java.time.LocalDate;
+import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 
@@ -17,30 +19,45 @@ import java.util.UUID;
 @RequestMapping("/api/batches")
 public class BatchesController {
 
-	private static final Logger LOG = LoggerFactory.getLogger(BatchesController.class);
+    private static final Logger LOG = LoggerFactory.getLogger(BatchesController.class);
 
-	private final BatchService batchService;
+    private final BatchService batchService;
 
-	public BatchesController(BatchService batchService) {
-		this.batchService = batchService;
-	}
+    public BatchesController(BatchService batchService){
+        this.batchService = batchService;
+    }
 
-	// GET /api/batches — stub list (unchanged)
+    // GET /api/batches — stub list (unchanged)
 	@GetMapping
 	public ResponseEntity<List<BatchResponseDTO>> listBatches() {
-		List<BatchResponseDTO> batches = List.of(
-				new BatchResponseDTO(1L, "Daily API Tests", "ACTIVE"),
-				new BatchResponseDTO(2L, "Weekly Regression", "INACTIVE")
-		);
-		return ResponseEntity.ok(batches);
+        List<BatchResponseDTO> batches = List.of(
+                BatchResponseDTO.builder()
+                        .id(UUID.randomUUID())
+                        .batchName("Daily API Tests")
+                        .scheduleId(334523453L)
+                        .startTime(LocalDate.now().minusDays(1))
+                        .lastTimeRun(LocalDate.now())
+                        .active(true)
+//                        .jobs(Collections.emptyList())
+                        .build(),
+                BatchResponseDTO.builder()
+                        .id(UUID.randomUUID())
+                        .batchName("Weekly Regression")
+                        .scheduleId(42L)
+                        .startTime(LocalDate.now().minusWeeks(1))
+                        .lastTimeRun(LocalDate.now().minusDays(3))
+                        .active(false)
+//                        .jobs(Collections.emptyList())
+                        .build()
+        );
+        return ResponseEntity.ok(batches);
 	}
 
 	// GET /api/batches/{id}
 	@GetMapping("/{id}")
-	public ResponseEntity<TestBatch> getBatch(@PathVariable UUID id) {
-		return batchService.getBatchById(id)
-				.map(b -> ResponseEntity.ok(b))
-				.orElseGet(() -> ResponseEntity.notFound().build());
+	public ResponseEntity<BatchResponseDTO> getBatch(@PathVariable UUID id) {
+        BatchResponseDTO batch = batchService.getBatchById(id);
+        return ResponseEntity.ok(batch);
 	}
 
 	// POST /api/batches
@@ -52,15 +69,20 @@ public class BatchesController {
 
 	// PUT /api/batches/{id} — stubbed
 	@PutMapping("/{id}")
-	public ResponseEntity<BatchResponseDTO> updateBatch(@PathVariable Long id,
-														@RequestBody BatchRequestDTO request) {
-		BatchResponseDTO updated = new BatchResponseDTO(id, request.getName(), "UPDATED");
-		return ResponseEntity.ok(updated);
+	public ResponseEntity<BatchResponseDTO> updateBatch(@PathVariable UUID id, @RequestBody BatchRequestDTO request) {
+        BatchResponseDTO updated = BatchResponseDTO.builder()
+                .id(id)
+                .batchName(request.getName())
+                .lastTimeRun(LocalDate.now())
+                .build();
+
+        return ResponseEntity.ok(updated);
 	}
 
-	// DELETE /api/batches/{id} — stubbed
+	// DELETE /api/batches/{id}
 	@DeleteMapping("/{id}")
-	public ResponseEntity<Void> deleteBatch(@PathVariable Long id) {
-		return ResponseEntity.noContent().build();
+	public ResponseEntity<Void> deleteBatch(@PathVariable UUID id) {
+		batchService.deleteBatchById(id);
+        return ResponseEntity.noContent().build();
 	}
 }
